Splash and launch scripts